--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Showcase for upcoming local events">
+    <meta name="keywords" content="community events, local events, whats on in your area, comunity">
     <meta name="author" content="Caffinated Coders">
     <title>Post It</title>
 
