--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="A website where you can post events that are happening at your local area">
+    <meta name="keywords" content="post, events, comments, location, local-area, holiday, celebrations">
     <meta name="author" content="Caffinated Coders">
     <title>Post It</title>
 
@@ -58,10 +58,9 @@
                     <li class="nav-item ">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                             href="{% url 'home' %}">Home</a>
-                    </li>
-                    <li class="nav-item ">
+                    </li>                    <li class="nav-item ">
                         <a class="nav-link {% if request.path == bio_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'bio' %}">The devs</a>
+                            href="{% url 'bio' %}">The Devs</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
