--- a/event/templates/event/post_detail.html
+++ b/event/templates/event/post_detail.html
@@ -44,7 +44,7 @@
         <!-- Comments Section on the Left -->
         <div class="col-md-8">
             <br>
-            <h3>Comments ({{ comment_count }}):</h3>
+            <h3 class="comment-h3">Comments ({{ comment_count }}):</h3>
             <div>
                 <!-- Loop through comments -->
                 {% for comment in comments %}
