add testing user stories to TESTING.md

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -342,7 +342,7 @@ footer{
 .pagination {
     margin: 0; 
     padding: 0;
-    list-style: none; /
+    list-style: none;
 }
 .scale {
     width: 100%;
