Edit: christmas lights flixed position

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,23 +102,18 @@ body {
     justify-content: center; /* Center the lights horizontally */
     gap: 8px; /* Space between bulbs */
     padding: 10px;
-    flex-wrap: wrap; /* Wrap bulbs to fit smaller screens */
     z-index: 10; /* Ensure it's above other content */
 }
-
 .christmas-lights-top{
     position: fixed;
-    top: 50px; 
+    top: 60px;
+    z-index: 25; 
 }
-
 .christmas-lights-bottom{
     position: fixed;
     bottom: 52px; /* Fixed to the bottom of the viewport */
     z-index: 1;
 }
-
-
-
 /* Default bulb size */
 .christmas-lights .bulb {
     width: 12px;
@@ -126,7 +121,6 @@ body {
     border-radius: 50%;
     animation: flicker 1s infinite;
 }
-
 /* Different colors for bulbs */
 .christmas-lights .bulb:nth-child(2) {
     background-color: green;
@@ -342,7 +336,7 @@ footer{
 .pagination {
     margin: 0; 
     padding: 0;
-    list-style: none; /
+    list-style: none; 
 }
 .scale {
     width: 100%;
