--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -102,23 +102,18 @@ body {
     justify-content: center; /* Center the lights horizontally */
     gap: 8px; /* Space between bulbs */
     padding: 10px;
-    flex-wrap: wrap; /* Wrap bulbs to fit smaller screens */
     z-index: 10; /* Ensure it's above other content */
 }
-
 .christmas-lights-top{
     position: fixed;
-    top: 50px; 
+    top: 60px;
+    z-index: 25; 
 }
-
 .christmas-lights-bottom{
     position: fixed;
     bottom: 52px; /* Fixed to the bottom of the viewport */
     z-index: 1;
 }
-
-
-
 /* Default bulb size */
 .christmas-lights .bulb {
     width: 12px;
@@ -126,7 +121,6 @@ body {
     border-radius: 50%;
     animation: flicker 1s infinite;
 }
-
 /* Different colors for bulbs */
 .christmas-lights .bulb:nth-child(2) {
     background-color: green;
@@ -236,7 +230,7 @@ footer{
 
 .post-subtitle {
     margin-left: 5%;
-    color: #c0c0c0;
+    color: black;
 } 
 .bg-color-1 {
     background-color: #ffff99; 
@@ -263,10 +257,9 @@ footer{
 /* Buttons */
 .btn-close-conf,
 .btn-edit, 
-.btn-comment-edit, 
-.btn-testimonial-edit {
-    color: #fff;
-    background: #e9761b;
+.btn-comment-edit {
+    color: black;
+    background: #ffff99;
     margin-left: 20px;
     border-radius: 10px;
     box-shadow: 5px 5px 10px black;
@@ -302,10 +295,10 @@ footer{
 
 .btn-delete-conf,
 .btn-delete, 
-.btn-comment-delete, 
-.btn-testimonial-delete {
-    color: #fff;
-    background: #e9761b;
+.btn-comment-delete
+ {
+    color: black;
+    background: #ff65a3;
 }
 .pagination-container {
     position: relative; /* Relative to contain the absolutely positioned buttons */
@@ -343,7 +336,7 @@ footer{
 .pagination {
     margin: 0; 
     padding: 0;
-    list-style: none; /
+    list-style: none; 
 }
 .scale {
     width: 100%;
@@ -365,8 +358,8 @@ footer{
 .masthead-text {
     z-index: 2;
     justify-self: center;
-    color: #D5D5D5;
-    background-color: #445261;
+    color: black;
+    background-color: #ff65a3;
     box-shadow: 5px 5px 10px black;
 }
 .masthead-image img {
@@ -383,19 +376,25 @@ footer{
     align-items: center;
 }
 .article-colour {
-    color: #c0c0c0;
-    background-color: #445261;
+    color: black;
+    background-color: #ffff99;
     box-shadow: 5px 5px 10px black;
 }
 .comment-colour {
     color: Black;
+}
+.comment-h3 {
+    background-color: #ffff99;
+    box-shadow: 5px 5px 10px black;
+    color: black;
+    padding: 10px;
+    
 }
 .wizard {
     display: flex;
     position: relative;
     top: 0vh;
     justify-content: center;
-    border-radius: 30px;
     background-color: #7afcff;
     box-shadow: 5px 5px 10px black;
     margin: 15%;
@@ -412,7 +411,6 @@ footer{
     position: relative;
     top: 0vh;
     justify-content: center;
-    border-radius: 30px;
     background-color: #ff65a3;
     box-shadow: 5px 5px 10px black;
     margin: 15%;
@@ -430,12 +428,11 @@ footer{
     bottom: -0vh;
     left: 40%;
     justify-content: center;
-    border-radius: 30px;
-    background-color: #445261;
+    background-color: #ff65a3;
     box-shadow: 5px 5px 10px black;
     margin-left: auto;
     margin-right:auto;
-    color: #c0c0c0;
+    color: black;
     justify-self: center;
     min-width: 40%;
     z-index: 10;
@@ -475,11 +472,10 @@ footer{
     min-width: 500px;
     display: flex;
     justify-content: center;
-    border-radius: 20px;
-    background-color: #445261;
+    background-color: #3DA6FF;
     box-shadow: 5px 5px 10px black;
     margin: 50px;
-    color: #c0c0c0;
+    color: black;
     justify-self: center;
     flex-direction: column; 
     align-items: center;    /* Vertically center */
@@ -524,9 +520,9 @@ footer{
 }
 
 .delete-modal {
-    background-color: #445261;
-    color: #c0c0c0;
-    border: 2px solid #c0c0c0;
+    background-color: #3DA6FF;
+    color: black;
+    border: 2px solid black;
 }
 
 .date {
@@ -536,7 +532,14 @@ footer{
 
 .btn-close-msg,
 .alert-dismissible {
-    color: #c0c0c0;
+   
+    color: black;
+    background-color: #ffff99;
+    
+}
+.alert-dismissible {
+    margin-top: 30px;
+    font-weight: 600;
 }
 .bio-card-1 {
     display: flex;
@@ -549,9 +552,8 @@ footer{
     color: black;
     justify-self: center;
     min-width: 30%;
-    z-index: 10;
     flex-direction: column; 
-    align-items: center;    /* Vertically center */
+    align-items: center;    
     justify-items: center; 
 }
 
@@ -566,9 +568,8 @@ footer{
     color: black;
     justify-self: center;
     min-width: 30%;
-    z-index: 10;
     flex-direction: column; 
-    align-items: center;    /* Vertically center */
+    align-items: center;    
     justify-items: center; 
 }
 
@@ -583,12 +584,11 @@ footer{
     color: black;
     justify-self: center;
     min-width: 30%;
-    z-index: 10;
     flex-direction: column; 
-    align-items: center;    /* Vertically center */
+    align-items: center;    
     justify-items: center; 
 }
-/* Optional: Add a default style to fallback */
+/* Add a default style to fallback */
 .bio-card {
     transition: background-color 0.3s ease;
 }
