--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -64,7 +64,7 @@
                     </ul>
                 {% endif %}
                 <hr><button type="button" class="btn prev-step" data-prev="step-1">&laquo; Go Back...</button>
-                <button type="submit" class="btn btn-signup">{% trans "Check if I'm done!" %} &raquo;</button>
+                <button type="submit" class="btn btn-signup-done">{% trans "Check if I'm done!" %} &raquo;</button>
             </div>
         </form>
         
