add lazy loading to bernard

--- a/event/templates/event/index.html
+++ b/event/templates/event/index.html
@@ -64,7 +64,7 @@
     <div class="face-container" id="face-container">
         <div class="eye left-eye"></div>
         <div class="eye right-eye"></div>
-        <img src="{% static 'images/elf.webp' %}" alt="Face" class="face-image">
+        <img src="{% static 'images/elf.webp' %}" alt="Face" class="face-image" loading="lazy">
     </div>
 </div>
 <script src="{% static 'js/postColours.js' %}"></script>
