--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,17 @@ body {
     font-weight: bold;
 }
 
+.search {
+    padding-top: 10px;
+    padding-left: 5px;
+}
+
+.contrast {
+    font-size: x-large;
+    color: #000000;
+    font-weight: 700;
+}
+
 /* Face (Elf) Container */
 .face-container {
     position: fixed;
@@ -700,6 +711,5 @@ main {
 
         display: none;
         /* Hide the elf container on tablet screens and smaller */
-    }
-    
+    }   
 }
